--- a/and2/and2.tex
+++ b/and2/and2.tex
@@ -1,8 +1,8 @@
 
-\cellname{And2}
+\cellname{AND2}
 \designer{Constantijn Schepens}
 \celldescription{A two input AND gate}
-\topimagesgate{../and2/symbol.pdf}{../and2/blackbox.pdf}
+\topimages{../and2/symbol.pdf}{../and2/gates.pdf}{../and2/blackbox.pdf}
 
 \acchar{../and2/acresults.txt}
 
