--- a/buffer/buffer.tex
+++ b/buffer/buffer.tex
@@ -1,5 +1,5 @@
 
-\cellname{buffer}
+\cellname{BUFFER}
 \designer{Ashley Robinson}
 \celldescription{A non-inverting buffer}
 \topimages{../buffer/symbol.pdf}{../buffer/gateLevel.pdf}{../buffer/blackbox.pdf}
