--- a/fulladder/detail.tex
+++ b/fulladder/detail.tex
@@ -1,4 +1,4 @@
-\cellname{fulladder}
+\cellname{FULLADDER}
 \designer{Martin Wearn}
 \celldescription{Adds two bit values and the previous bitslice carry out, to produce a sum and carry}
 
