--- a/fulladder/fulladder.tex
+++ b/fulladder/fulladder.tex
@@ -1,5 +1,5 @@
 
-\cellname{fulladder}
+\cellname{FULLADDER}
 \designer{Martin Wearn}
 \celldescription{Adds two bit values and the previous bitsclie carry out, to produce a sum and carry}
 \topimages{../fulladder/symbol.png}{../fulladder/circuitdiagram.pdf}{../fulladder/blackbox.pdf}
