--- a/halfadder/halfadder.tex
+++ b/halfadder/halfadder.tex
@@ -1,5 +1,5 @@
 
-\cellname{halfadder}
+\cellname{HALFADDER}
 \designer{Martin Wearn}
 \celldescription{Adds two bits to produce a sum and carry}
 \topimages{../halfadder/symbol.png}{../halfadder/circuitdiagram.pdf}{../halfadder/blackbox.pdf}
