--- a/inv/inv.tex
+++ b/inv/inv.tex
@@ -1,5 +1,5 @@
 
-\cellname{Inverter}
+\cellname{INV}
 \designer{Henry Lovett}
 \celldescription{A basic inverter gate}
 \topimagesgate{../inv/symbol.pdf}{../inv/blackbox.pdf}
