--- a/leftbuf/leftbuf.tex
+++ b/leftbuf/leftbuf.tex
@@ -1,5 +1,5 @@
 
-\cellname{leftbuf}
+\cellname{LEFTBUF}
 \designer{Henry Lovett}
 \celldescription{A start of row buffer cell.}
 \topimages{../leftbuf/symbol.pdf}{../leftbuf/circuitdiagram.pdf}{../leftbuf/blackbox.pdf}
