--- a/mux2/mux2.tex
+++ b/mux2/mux2.tex
@@ -1,5 +1,5 @@
 
-\cellname{mux2}
+\cellname{MUX2}
 \designer{Constantijn Schepens}
 \celldescription{A two input Multiplexor}
 \topimages{../mux2/symbol.pdf}{../mux2/circuitdiagram.pdf}{../mux2/blackbox.pdf}
