--- a/nand2/nand2.tex
+++ b/nand2/nand2.tex
@@ -1,5 +1,5 @@
 
-\cellname{nand2}
+\cellname{NAND2}
 \designer{Constantijn Schepens}
 \celldescription{A two input NAND gate}
 \topimagesgate{../nand2/symbol.pdf}{../nand2/blackbox.pdf}
