--- a/nand3/nand3.tex
+++ b/nand3/nand3.tex
@@ -1,5 +1,5 @@
 
-\cellname{nand3}
+\cellname{NAND3}
 \designer{Constantijn Schepens}
 \celldescription{A three input NAND gate}
 \topimagesgate{../nand3/symbol.pdf}{../nand3/blackbox.pdf}
