--- a/nand4/nand4.tex
+++ b/nand4/nand4.tex
@@ -1,5 +1,5 @@
 
-\cellname{nand4}
+\cellname{NAND4}
 \designer{Constantijn Schepens}
 \celldescription{A four input NAND gate}
 \topimagesgate{../nand4/symbol.pdf}{../nand4/blackbox.pdf}
