--- a/nor2/nor2.tex
+++ b/nor2/nor2.tex
@@ -1,5 +1,5 @@
 
-\cellname{nor2}
+\cellname{NOR2}
 \designer{Henry Lovett}
 \celldescription{A two input NOR gate}
 \topimagesgate{../nor2/symbol.pdf}{../nor2/blackbox.pdf}
