--- a/nor3/nor3.tex
+++ b/nor3/nor3.tex
@@ -1,5 +1,5 @@
 
-\cellname{nor3}
+\cellname{NOR3}
 \designer{Henry Lovett}
 \celldescription{A three input NOR gate}
 \topimagesgate{../nor3/symbol.pdf}{../nor3/blackbox.pdf}
