--- a/or2/or2.tex
+++ b/or2/or2.tex
@@ -1,8 +1,8 @@
 
-\cellname{or2}
+\cellname{OR2}
 \designer{Henry Lovett}
 \celldescription{A two input OR gate}
-\topimagesgate{../or2/symbol.pdf}{../or2/blackbox.pdf}
+\topimages{../or2/symbol.pdf}{../or2/gates.pdf}{../or2/blackbox.pdf}
 
 \acchar{../or2/acresults.txt}
 
