--- a/rightend/rightend.tex
+++ b/rightend/rightend.tex
@@ -2,7 +2,7 @@
 \cellname{rightend}
 \designer{Henry Lovett}
 \celldescription{An end of row buffer cell.}
-\topimagesgate{../rightend/symbol.pdf}{../rightend/blackbox.pdf}
+\topimages{../rightend/symbol.pdf}{../rightend/gates.pdf}{../rightend/blackbox.pdf} %no visio for gates as taken from inv
 
 \acchar{../rightend/acresults.txt}
 
