--- a/rowcrosser/rowcrosser.tex
+++ b/rowcrosser/rowcrosser.tex
@@ -1,5 +1,5 @@
 
-\cellname{rowcrosser}
+\cellname{ROWCROSSER}
 \designer{Martin Wearn}
 \celldescription{A rowcrossing cell}
 %\topimages{../rowcrosser/symbol.jpg}{../rowcrosser/circuitdiagram.jpg}{../rowcrosser/blackbox.pdf}
