--- a/scandtype/scandtype.tex
+++ b/scandtype/scandtype.tex
@@ -1,5 +1,5 @@
 
-\cellname{scandtype}
+\cellname{SCANDTYPE}
 \designer{Constantijn Schepens}
 \celldescription{A scannable D-Type cell}
 \topimages{../scandtype/symbol.jpg}{../scandtype/circuitdiagram.jpg}{../scandtype/blackbox.pdf}
