--- a/scanreg/scanreg.tex
+++ b/scanreg/scanreg.tex
@@ -1,5 +1,5 @@
 
-\cellname{scanreg}
+\cellname{SCANREG}
 \designer{Constantijn Schepens}
 \celldescription{A scannable register cell}
 \topimages{../scanreg/symbol.jpg}{../scanreg/circuitdiagram.jpg}{../scanreg/blackbox.pdf}
