--- a/smux2/detail.tex
+++ b/smux2/detail.tex
@@ -1,4 +1,4 @@
-\cellname{smux2}
+\cellname{SMUX2}
 \designer{Constantijn Schepens}
 \celldescription{A 2 input scannable multiplexer, intended to be connected to a
 raw D-type to create a scannable D-type.}
