--- a/smux3/detail.tex
+++ b/smux3/detail.tex
@@ -1,4 +1,4 @@
-\cellname{smux3}
+\cellname{SMUX3}
 \designer{Constantijn Schepens}
 \celldescription{A 3 input scannable multiplexer, intended to be connected to a
 raw D-type to create a scannable register.}
