--- a/tielow/tielow.tex
+++ b/tielow/tielow.tex
@@ -1,5 +1,5 @@
 
-\cellname{tielow}
+\cellname{TIELOW}
 \designer{Martin Wearn}
 \celldescription{A tie to GND cell}
 %\topimages{../tielow/symbol.jpg}{../tielow/circuitdiagram.jpg}{../tielow/blackbox.pdf}
