--- a/trisbuf/trisbuf.tex
+++ b/trisbuf/trisbuf.tex
@@ -1,5 +1,5 @@
 
-\cellname{trisbuf}
+\cellname{TRISBUF}
 \designer{Ashley Robinson}
 \celldescription{A tristate buffer}
 \topimages{../trisbuf/symbol.pdf}{../trisbuf/gateLevel.pdf}{../trisbuf/blackbox.pdf}
