--- a/xor2/xor2.tex
+++ b/xor2/xor2.tex
@@ -1,5 +1,5 @@
 
-\cellname{xor2}
+\cellname{XOR2}
 \designer{Ashley Robinson}
 \celldescription{A two input xor gate}
 \topimages{../xor2/symbol.pdf}{../xor2/gateLevel.pdf}{../xor2/blackbox.pdf}
