--- a/tiehigh/tiehigh.tex
+++ b/tiehigh/tiehigh.tex
@@ -1,5 +1,5 @@
 
-\cellname{tiehigh}
+\cellname{TIEHIGH}
 \designer{Martin Wearn}
 \celldescription{A tie to Vdd cell}
 %\topimages{../tiehigh/symbol.jpg}{../tiehigh/circuitdiagram.jpg}{../tiehigh/blackbox.pdf}
