done symbols and gate level diagrams for scanables.

--- a/scanreg/scanreg.tex
+++ b/scanreg/scanreg.tex
@@ -2,7 +2,7 @@
 \cellname{SCANREG}
 \designer{Constantijn Schepens}
 \celldescription{A scannable register cell}
-\topimages{../scanreg/symbol.jpg}{../scanreg/circuitdiagram.jpg}{../scanreg/blackbox.pdf}
+\topimages{../scanreg/symbol.pdf}{../scanreg/circuitdiagram.pdf}{../scanreg/blackbox.pdf}
 
 \acchar{../scanreg/acresults.txt}
 
