--- a/scandtype/scandtype.tex
+++ b/scandtype/scandtype.tex
@@ -2,7 +2,7 @@
 \cellname{SCANDTYPE}
 \designer{Constantijn Schepens}
 \celldescription{A scannable D-Type cell}
-\topimages{../scandtype/symbol.jpg}{../scandtype/circuitdiagram.jpg}{../scandtype/blackbox.pdf}
+\topimages{../scandtype/symbol.pdf}{../scandtype/circuitdiagram.pdf}{../scandtype/blackbox.pdf}
 
 \acchar{../scandtype/acresults.txt}
 
