Sorted introduction out.

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -81,6 +81,9 @@
 \maketitle
 \cleardoublepage
 \tableofcontents
+
+\input{Introduction.tex}
+
 %% ----------------------------------------------------------------
 %\mainmatter
 \input{../and2/and2.tex}
