--- a/rightend/rightend.tex
+++ b/rightend/rightend.tex
@@ -1,5 +1,5 @@
 
-\cellname{rightend}
+\cellname{RIGHTEND}
 \designer{Henry Lovett}
 \celldescription{An end of row buffer cell.}
 \topimages{../rightend/symbol.pdf}{../rightend/gates.pdf}{../rightend/blackbox.pdf} %no visio for gates as taken from inv
