Put divison of labour table in. Needs completing.

--- a/global/AppendixA.tex
+++ b/global/AppendixA.tex
@@ -40,3 +40,39 @@ This way each designer could add their own files to the data book independently.
 
 \clearpage
 \subsection{Division of Labour}
+\begin{table}[htb!]
+\begin{tabular}{|p{1cm}|c|c|c|c|c|}\hline
+&Task & \multicolumn{4}{|c|}{Percentage Effort on Each Task (\%)} \\ \hline
+& ECS ID 						& mw20g10 & cs7g10 & ajr2g10 & hl13g10 \\ \hline
+1&RDTYPE						&	0	&	0	&	100	&	0	\\ \hline
+2&SMUX2							&	0	&	100	&	0	&	0	\\ \hline
+3&SMUX3							&	0	&	100	&	0	&	0	\\ \hline
+4&MUX2							&	0	&	100	&	0	&	0	\\ \hline
+5&FULLADDER						&	100	&	0	&	0	&	0	\\ \hline
+6&HALFADDER						&	100	&	0	&	0	&	0	\\ \hline
+7&XOR2							&	0	&	0	&	100	&	0	\\ \hline
+8&INV							&	0	&	0	&	0	&	100	\\ \hline
+9&NAND2							&	0	&	100	&	0	&	0	\\ \hline
+10&NAND3						&	0	&	100	&	0	&	0	\\ \hline
+11&NAND4						&	0	&	100	&	0	&	0	\\ \hline
+12&NOR2							&	0	&	0	&	0	&	100	\\ \hline
+13&NOR3							&	0	&	0	&	0	&	100	\\ \hline
+14&AND2							&	0	&	100	&	0	&	0	\\ \hline
+15&OR2							&	0	&	0	&	0	&	100	\\ \hline
+16&TRISBUF						&	0	&	0	&	100	&	0	\\ \hline
+17&BUFFER						&	0	&	0	&	100	&	0	\\ \hline
+18&LEFTBUF						&	0	&	0	&	0	&	100	\\ \hline
+19&RIGHTEND						&	0	&	0	&	0	&	100	\\ \hline
+20&TIEHIGH						&	100	&	0	&	0	&	0	\\ \hline
+21&TIELOW						&	100	&	0	&	0	&	0	\\ \hline
+22&ROWCROSSER					&	100	&	0	&	0	&	0	\\ \hline
+23&SCANDTYPE					&	0	&	0	&	0	&	0	\\ \hline
+24&SCANREG						&	0	&	0	&	0	&	0	\\ \hline
+25&Verilog Simulation			&	0	&	0	&	0	&	0	\\ \hline
+26&HSpice Characterization		&	0	&	0	&	0	&	0	\\ \hline
+27& Final Report (words)		&	0	&	0	&	0	&	0	\\ \hline
+28& Final Report (figures)		&	0	&	0	&	0	&	0	\\ \hline
+& OVERALL EFFORT 				&	0	&	0	&	0	&	0	\\ \hline
+& Signature: 					& 		& 		& 		&		\\ \hline
+\end{tabular}
+\end{table}
