Sorted title page. Fixes #57

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -7,6 +7,7 @@
 \usepackage{epstopdf}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage[nodayofweek]{datetime}
 %\usepackage{lipsum}% dummy text
 %\usepackage{todonotes}
 %\usepackage[disable]{todonotes} %uncomment this to disable to do notes
@@ -76,7 +77,7 @@
 
 \title{Cell Library Databook}
 
-\author{by Team S5\\ H. Lovett (hl13g10) \\ A. J. Robinson (ajr2g10) \\ C. Schepens (cs7g10) \\ M. Wearn (mw20g10)}
+\author{by Team S5\\ \\ H. Lovett (hl13g10) \\ A. J. Robinson (ajr2g10) \\ C. Schepens (cs7g10) \\ M. Wearn (mw20g10)}
 %\frontmatter
 \maketitle
 \cleardoublepage
