Sorted symbols for ties

--- a/global/tiecells.tex
+++ b/global/tiecells.tex
@@ -6,18 +6,20 @@
 {\bf Designer: } Martin Wearn\\
 {\bf Cell Description: } A tie to Vdd cell.\\
 \subsection*{Dimensions}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../tiehigh/blackbox.pdf}
+\subsection*{Symbol}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../tiehigh/symbol.pdf}
 
 \section{TIE LOW}
 \makebox[\linewidth]{\rule{0.5\textwidth}{0.4pt}} 
 {\bf Designer: } Martin Wearn\\
 {\bf Cell Description: } A  tie to GND cell.\\
 \subsection*{Dimensions}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../tielow/blackbox.pdf}
+\subsection*{Symbol}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../tielow/symbol.pdf}
 \end{multicols}
 
 \section{ROWCROSSER} \makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 {\bf Designer: } Martin Wearn\\
 {\bf Cell Description: } A row crossing cell.\\
+\begin{multicols}{2}
 \subsection*{Dimensions}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../rowcrosser/blackbox.pdf}
-
-
-
+\subsection*{Symbol}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../rowcrosser/symbol.pdf}
+\end{multicols}
