--- a/global/Introduction.tex
+++ b/global/Introduction.tex
@@ -1,5 +1,5 @@
 \newpage
-\section*{Introduction}
+\section{Introduction}
 
 The set of cells contained within this library are based upon $0.35\mu m$ unified CMOS technology. The follow a two-layer metal design on top of a p-type substrate with N-Well and P-Well regions for pull-up and pull-down networks respectively. All cells are a common $17.2\mu m$ high, with varied widths all integer multiples of 1.2µm. 
 All transistors are fixed at $W_P = 2.4\mu m$, $L_P = 0.35\mu m$, $W_N = 1.5\mu m$, $L_N = 0.35\mu m$.
