Changed to color hspice sims

--- a/fulladder/detail.tex
+++ b/fulladder/detail.tex
@@ -5,5 +5,5 @@
 \stickdiagram{../fulladder/stickdiagram.pdf}
 \acchar{../fulladder/acresults.txt}
 \transistor{../fulladder/transistorcd.pdf}
-\spicesim{../fulladder/hspice.png}
+\spicesim{../fulladder/hspiceColor.png}
 
