--- a/halfadder/detail.tex
+++ b/halfadder/detail.tex
@@ -5,5 +5,5 @@
 \stickdiagram{../halfadder/stickdiagram.pdf}
 \acchar{../halfadder/acresults.txt}
 \transistor{../halfadder/transistorcd.pdf}
-\spicesim{../halfadder/hspice.png}
+\spicesim{../halfadder/hspiceColor.png}
 
