--- a/leftbuf/detail.tex
+++ b/leftbuf/detail.tex
@@ -26,27 +26,27 @@ $W_p$ folded	($\mu m$)	&	$1 \times 2.9$ 	& 	$1 \times 7.85$ 	& 	$2 \times 10.6$ 
 \stickdiagram{../leftbuf/stickdiagram.pdf}
 \acchar{../leftbuf/acresults.txt}
 \transistor{../leftbuf/transistorcd.pdf}
-
+\spicesim{../leftbuf/hspiceColor.png}
 %override of default
-\subsubsection*{HSpice Simulation}
-\begin{figure}[ht!]
-        \centering
-        \begin{subfigure}[b]{0.45\textwidth}
-                \includegraphics[width=\textwidth]{../leftbuf/hspiceClock.png}
-        \end{subfigure}%
-        ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
-          %(or a blank line to force the subfigure onto a new line)
-        \begin{subfigure}[b]{0.45\textwidth}
-                \includegraphics[width=\textwidth]{../leftbuf/hspiceNReset.png}
-        \end{subfigure} 
-		~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
-          %(or a blank line to force the subfigure onto a new line)
-        \begin{subfigure}[b]{0.45\textwidth}
-                \includegraphics[width=\textwidth]{../leftbuf/hspiceSDO.png}
-        \end{subfigure} 
-		~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
-          %(or a blank line to force the subfigure onto a new line)
-        \begin{subfigure}[b]{0.45\textwidth}
-                \includegraphics[width=\textwidth]{../leftbuf/hspiceTest.png}
-        \end{subfigure}
-\end{figure}
+%\subsubsection*{HSpice Simulation}
+%\begin{figure}[ht!]
+%        \centering
+%        \begin{subfigure}[b]{0.5\textwidth}
+%                \includegraphics[width=\textwidth]{../leftbuf/hspiceClockColor.png}
+%%        \end{subfigure}%
+ %       ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+ %         %(or a blank line to force the subfigure onto a new line)
+ %       \begin{subfigure}[b]{0.5\textwidth}
+ %               \includegraphics[width=\textwidth]{../leftbuf/hspiceNResetColor.png}
+ %       \end{subfigure} 
+%		~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+%          %(or a blank line to force the subfigure onto a new line)
+%        \begin{subfigure}[b]{0.5\textwidth}
+%                \includegraphics[width=\textwidth]{../leftbuf/hspiceSDOColor.png}
+%        \end{subfigure} 
+%		~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+%          %(or a blank line to force the subfigure onto a new line)
+%        \begin{subfigure}[b]{0.5\textwidth}
+%                \includegraphics[width=\textwidth]{../leftbuf/hspiceTestColor.png}
+%        \end{subfigure}
+%\end{figure}
