--- a/rdtype/detail.tex
+++ b/rdtype/detail.tex
@@ -10,5 +10,5 @@ The D input on the middle left was intentionally not surrounded leaving only met
 \stickdiagram{../rdtype/stickdiagram.pdf}
 \acchar{../rdtype/acresults.txt}
 \transistor{../rdtype/transistorcd.pdf}
-\spicesim{../rdtype/hspice.png}
+\spicesim{../rdtype/hspiceColor.png}
 
