--- a/smux2/detail.tex
+++ b/smux2/detail.tex
@@ -12,4 +12,4 @@ creating a gate matrix design.
 \stickdiagram{../smux2/stickdiagram.pdf}
 \acchar{../smux2/acresults.txt}
 \transistor{../smux2/transistorcd.pdf}
-\spicesim{../smux2/hspice.png}
+\spicesim{../smux2/hspiceColor.png}
