--- a/smux3/detail.tex
+++ b/smux3/detail.tex
@@ -15,4 +15,4 @@ metal 1 exclusively(to reduce the number of vias).
 \stickdiagram{../smux3/stickdiagram.pdf}
 \acchar{../smux3/acresults.txt}
 \transistor{../smux3/transistorcd.pdf}
-\spicesim{../smux2/hspice.png}
+\spicesim{../smux2/hspiceColor.png}
