--- a/xor2/detail.tex
+++ b/xor2/detail.tex
@@ -7,4 +7,4 @@ Compound gate routed using an Euler path.
 \stickdiagram{../xor2/stickdiagram.pdf}
 \acchar{../xor2/acresults.txt}
 \transistor{../xor2/transistorcd.pdf}
-\spicesim{../xor2/hspice.png}
+\spicesim{../xor2/hspiceColor.png}
