Made Data book a section and cells subsection

--- a/global/tiecells.tex
+++ b/global/tiecells.tex
@@ -1,14 +1,14 @@
 \newpage
 
 \begin{multicols}{2}
-\section{TIE HIGH}
+\subsection{TIE HIGH}
 \makebox[\linewidth]{\rule{0.5\textwidth}{0.4pt}}
 {\bf Designer: } Martin Wearn\\
 {\bf Cell Description: } A tie to Vdd cell.\\
 \subsection*{Dimensions}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../tiehigh/blackbox.pdf}
 \subsection*{Symbol}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../tiehigh/symbol.pdf}
 
-\section{TIE LOW}
+\subsection{TIE LOW}
 \makebox[\linewidth]{\rule{0.5\textwidth}{0.4pt}} 
 {\bf Designer: } Martin Wearn\\
 {\bf Cell Description: } A  tie to GND cell.\\
@@ -16,7 +16,7 @@
 \subsection*{Symbol}\includegraphics[width=\textwidth,height=4cm,keepaspectratio=true]{../tielow/symbol.pdf}
 \end{multicols}
 
-\section{ROWCROSSER} \makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+\subsection{ROWCROSSER} \makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 {\bf Designer: } Martin Wearn\\
 {\bf Cell Description: } A row crossing cell.\\
 \begin{multicols}{2}
