Added some space to title page

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -85,7 +85,7 @@
 
 \title{Cell Library Databook}
 
-\author{by Team S5\\ \\ H. Lovett (hl13g10) \\ A. J. Robinson (ajr2g10) \\ C. Schepens (cs7g10) \\ M. Wearn (mw20g10)}
+\author{by Team S5\\ \vspace{4cm} \\ H. Lovett (hl13g10) \\ A. J. Robinson (ajr2g10) \\ C. Schepens (cs7g10) \\ M. Wearn (mw20g10)\vspace{4cm}}
 %\frontmatter
 \maketitle
 \cleardoublepage
@@ -98,16 +98,14 @@
 \renewcommand*{\thesection}{\arabic{section} }
 
 \cleardoublepage
-\begin{titlepage}
     \vspace*{\fill}
     \begin{center}
 		\nosection{Cell Library Databook}
       {\Huge CELL LIBRARY DATABOOK }
     \end{center}
     \vspace*{\fill}
-  \end{titlepage}
-
 \cleardoublepage
+
 \input{../and2/and2.tex}
 \input{../buffer/buffer.tex}
 \input{../fulladder/fulladder.tex}
