Corrected a page break

--- a/global/Databook.tex
+++ b/global/Databook.tex
@@ -135,7 +135,7 @@
 \appendix
 \input{AppendixA.tex}
 
-
+\clearpage
 \section{Design Detail}
 All HSpice simulations were done using a loaded cell.
 All the inputs were driven by an inverter, and all outputs drove two inverters, seen in Figure \ref{fig:loadedsims}
